# lk-smx-profiles

./: .env.example  .gitignore  README.md  agent.py  agent_all.py  agent_boost.py  agent_boost_sam.py  agent_bst_sam.py  agent_debug.py  publish.py  publish_wav.py  pyproject.toml  speechmatics_1.4.5_no_ext_vad.py
samples/: speechmatics_1.4.5_ext_vad.py  speechmatics_1.4.5_no_ext_vad.py
