[project]
name = "livekit-voice-agent"
version = "0.1.0"
description = "LiveKit voice agent with Speechmatics integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "speechmatics-voice[smart]==0.2.9rc3",
    "livekit-agents==1.4.4",
    "livekit-plugins-speechmatics==1.4.4",
    "livekit-plugins-elevenlabs==1.4.4",
    "livekit-plugins-openai==1.4.4",
    "livekit-plugins-deepgram==1.4.4",
    "livekit-plugins-soniox==1.4.4",
    "livekit-plugins-silero==1.4.4",
    "livekit-plugins-turn-detector==1.4.4",
    "python-dotenv>=1.2.1",
    "pydub>=0.25",
    "sounddevice>=0.5",
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "F"]


# [tool.uv.sources]
# speechmatics-voice = { path = "../../speechmatics-python-sdk/sdk/voice", editable = true }
# livekit-plugins-speechmatics = { path = "../../livekit/livekit-agents/livekit-plugins/livekit-plugins-speechmatics", editable = true }

# [tool.uv]
# override-dependencies = [
#     "speechmatics-voice[smart]>=0.0.0",
#     "livekit-plugins-speechmatics>=0.0.0",
# ]